--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
             width: 250px;
             height: 250px;
         }
+
+        p {
+            font-size: 2em;
+        }
     </style>
 </head>
 <body>
@@ -68,7 +72,7 @@
             </g>
         </g>
     </svg>
-    <h1>Coming soon!</h1>
+    <h1>Coming Soon!</h1>
     <p>Mina Karam</p>
 </body>
 </html>
