--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="icon" type="image/x-icon" href="icon.png">
     <title>Stylz.ai: Your AI Stylist</title>
     <meta name="description"
-        content="Stylz.ai: Your AI Stylist - Revolutionize your fashion with AI-powered personalized outfit suggestions. Upload your wardrobe, let intelligent algorithms analyze your preferences, and receive stylish, coordinated recommendations tailored to your style. Simplify your fashion decisions and elevate your personal look effortlessly!" />
+        content="Stylz.ai: Revolutionize fashion with AI-powered outfits. Upload your wardrobe & get personalized style recommendations!" />
     <meta name="keywords"
         content="fashion, AI stylist, personalized outfit suggestions, wardrobe analysis, style recommendations, fashion decisions, personal look" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Stylz.ai: Your AI Stylist" />
     <meta property="og:description"
-        content="Stylz.ai: Your AI Stylist - Revolutionize your fashion with AI-powered personalized outfit suggestions. Upload your wardrobe, let intelligent algorithms analyze your preferences, and receive stylish, coordinated recommendations tailored to your style. Simplify your fashion decisions and elevate your personal look effortlessly!" />
+        content="Stylz.ai: Revolutionize fashion with AI-powered outfits. Upload your wardrobe & get personalized style recommendations!" />
     <meta property="og:site_name" content="Stylz.ai" />
     <meta property="og:image" content="logo.png" />
     <meta property="og:image:width" content="294px" />
